# ome-server

./: README  class-dbi.txt  install.pl  node-transitions.txt
conf/: httpd.ome.conf  httpd.ome.dev.conf  httpd.omeds-dev.conf  httpd.omeds.conf  httpd.omeis-dev.conf  httpd.omeis.conf  httpd.web-dev.conf  httpd.web.conf  httpd1.99.omeds-dev.conf  httpd1.99.omeds.conf  httpd1.99.web-dev.conf  httpd1.99.web.conf  httpd2.ome.dev.conf  httpd2.omeds-dev.conf  httpd2.omeds.conf  httpd2.omeis.conf  httpd2.web-dev.conf  httpd2.web.conf
custom/: README  dgas-patch.pl  dgas.xls
custom/DGAS-Annotations/: DGAS_annotations.txt  README  dgas-templates.pl  parseDGASannotations.pl  parseWISHannotations.pl  wish.xls
custom/NIA/: GuestFooterBuilder.pm  GuestHeaderBuilder.pm  README  index-yoshikawa.html  index.html
doc/: ChangeLog  HACKING  INSTALL  INSTALL.Debian  INSTALL.FreeBSD  INSTALL.OSX  INSTALL.RedHat  MakeHTMLdocs  OME-DB.html  OMEsetup.html  OMExmlrpc.html  docs.html  index.html  install.html  installhtml  matlab-handler.pod  ome.dtd  ome.rss  postgresql_autodoc.pl  requirements.html  rss_cvs_commit_script
doc/SBDD/: index.htm
doc/TagsHistory/: build-2003032018  build-2003032718  build-2003042419  build-2003051520
doc/install-configs/: FC2-ome-install.eval  OS-X-ome-install.eval
scripts/: OMEtouch.sh
src/C/: BSUtils.c  BinarizeGlobal.c  ByteSwapImageGUI.c  DumpDV.c  DumpSoftWorxExHeader.c  DumpSoftWorxHeader.c  DumpSoftWorxStats.c  DumpTIFFheader.c  DumpTIFFstats.c  Makefile  OME_DV.c  OME_Image_XYZ_fastStats.c  OME_Image_XYZ_stats.c  OME_Image_XY_stats.c  OME_Image_XY_sums.c  OME_JPEG.c  OMEdb.c  OMEdb.h  OMEimportDV  OMEimportDVfile.c  SetDVwave.c  SoftWorxSlice.c  abs2rel.c  chain.c  dump8bitTiff.c  extractBinData.c  findApproachDist.c  findSpotsDB.c  findSpotsOME.c  findSpotsOME.old.c  findSpotsOMEwrpr.c  findspotsOMEcolumns  insertBinData.c  maxIntensity.c  readTIFF.h  readTiffData.c  readyDump.sql  rel2abs.c  spawnSpots.c  trackSpotsDB.c  (+2 more)
src/C/WND_CHARM/: Makefile.am  Makefile.in  README  TrainingSet.cpp  TrainingSet.h  autogen.sh  cmatrix.cpp  cmatrix.h  config.h.in  configure  configure.ac  signatures.cpp  signatures.h  test.c  wndchrm.cpp
src/C/WND_CHARM/colors/: FuzzyCalc.cpp  FuzzyCalc.h  color_functions.txt  rulesfile1.txt
src/C/WND_CHARM/statistics/: CombFirst4Moments.cpp  CombFirst4Moments.h  FeatureStatistics.cpp
src/C/WND_CHARM/textures/: gabor.cpp  gabor.h  tamura.cpp  tamura.h
src/C/WND_CHARM/textures/haarlick/: CVIPtexture.cpp  haarlick.cpp  haarlick.h  mb_texture.c  mb_texture_cl.c
src/C/WND_CHARM/textures/zernike/: mb_Znl.c  zernike.cpp  zernike.h
src/C/WND_CHARM/transforms/: ChebishevFourier.cpp  ChebishevFourier.h  chevishev.cpp  chevishev.h
src/C/WND_CHARM/transforms/fft/: fftw3.h
src/C/WND_CHARM/transforms/wavelet/: COMPRESSIONUTILS.H  Common.h  CompressionUtils.cpp  DataGrid.cpp  DataGrid1D.cpp  DataGrid1D.h  DataGrid3D.cpp  Output.cpp  Output.h  OutputCompressor.cpp  OutputCompressor.h  OutputDecompressor.cpp  OutputDecompressor.h  README.txt  RemoteProcessor.cpp  RemoteProcessor.h  Wavelet.cpp  Wavelet.h  wavecmp.cpp  wavedcmp.cpp  wavelets.c  wavelets.h
src/C/omeis/: File.c  File.h  Makefile  Makefile.am  OMEIS_Error.c  OMEIS_Error.h  Pixels.c  Pixels.h  README  acinclude.m4  archive.c  auth.c  auth.h  autogen.sh  b64z_lib.c  b64z_lib.h  base64.c  base64.h  cgi.c  cgi.h  composite.c  composite.h  configure  configure.ac  digest.c  digest.h  method.c  method.h  omeis.c  omeis.h  patch_sha1DB.c  purge.c  repository.c  repository.h  sha1DB.c  sha1DB.h  update-thumbs.pl  update.c  update.h  updateOMEIS.c  (+9 more)
src/C/omeis-http/: Makefile  Makefile.am  README  autogen.sh  configure  configure.ac  httpOMEIS-MATLAB.c  httpOMEIS-generic.c  httpOMEIS.c  httpOMEIS.h  httpOMEISaux-MATLAB.c  httpOMEISaux-MATLAB.h  httpOMEISaux.c  httpOMEISaux.h  main.c  testStats.c
src/C/omeis-itk/: CMakeLists.txt  itkOMEIS.c  itkOMEIS.h  itkOMEISImageIO.cxx  itkOMEISImageIO.h  omeis2itk.cxx  omeis2mhd.c  tmp.omeis
src/C/omeis/Attic/jpegls/: README  old_makefil
src/C/omeis/Attic/jpegls/include/: global.h
src/C/omeis/Attic/jpegls/lib/: Makefile.am
src/C/omeis/t/: Makefile.am  README-testDeps  _FileInfo  _FileSHA1  _ImportOMEfile  _ReadFile  authtest.c  authtest2.c  test-concurrent-write.c  test_omeis.pl
src/C/omeis/zoom/: Makefile  README  README-OME
src/C/omeis/zoom/Attic/libpic/: Makefile
src/C/omeis/zoom/Attic/libsys/: Makefile
src/C/omeis/zoom/Attic/zoom/: Makefile
src/C/omeis/zoom/include/: filt.h  pic.h  pixel.h  scanline.h  simple.h  window.h  zoom.h
src/C/omeis/zoom/lib/: Makefile  Makefile.am  filt.c  jpeg.c  omeis.c  pic.3  pic.c  pic_all.c  pic_file.c  png.c  scanline.c  swap.c  tiff.c  window.c  zoom.1  zoom.c  zoom_main.c
src/Excel/: OME-Excel.xls  imageAnnotate.xls
src/JavaScript/: ImageOverlay.js  UseWithJoust.js  categories.js  crypto.js  ome2.js  slider.js  toolBox.js
src/crontab/: compressOMEIS  pg_sync  purgeOMEIS  vacuumdb
src/html/: index.html  menu.html  menuFrame.html  menucntrl.html  noOp.html  ome2.css  pod.css  title.html
src/java/: INSTALL  README  build.xml
src/matlab/: Makefile  matlabModuleDebuggingGuide.txt  ome-Matlab.h  ome_getRepositoryFilename.m  ome_pixelsTest.m  ome_planeStatistics.m  ome_readPixelsPlane.m  setup_testdata.m  utilityFunctionsMasterFile.m
src/perl2/: LogService.pl  MANIFEST  MANIFEST.SKIP  Makefile.PL  OME-LS.conf  OME-startup.pl  OME.pm  README  SOAP.pl  SVGcatchMsg.pl  SimpleWorkerExecutor.pm  index.pod  makePODIndex.pl  newdevelopers.pod  omeapi.pod  omemodules.pod  perlCheck.pl  serve.pl  showENV.pl
src/util/: ome  ome-worker  omeadmin
src/xml/: 020-ImageAttributes.xml  AnalysisChain.xsd  AnalysisModule.xsd  AnalysisModuleExample.xml  AnnotationModule.ome  AreaStats.ome  BootstrapXML  CLIExecutionInstructions.xsd  CoreChains  CoreModules  CoreXML  DisplayOptions.ome  DisplaySettings.ome  EchoModule.ome  FastStackStatistics.ome  ImageHistogramChain.xml  ImageServerHistogram.ome  ImageServerStatistics.ome  ImportModule.ome  (+37 more)
update/: README  update-IR1-IR2.pl
(+3150 files in other folders)
