noinst_LIBRARIES=libhttpOMEIS.a @MATLAB_LIBRARY@
EXTRA_LIBRARIES=libhttpOMEISMATLAB.a

libhttpOMEIS_a_SOURCES = httpOMEIS.c httpOMEIS.h httpOMEISaux.c httpOMEISaux.h httpOMEIS-generic.c
libhttpOMEISMATLAB_a_SOURCES = httpOMEIS.c httpOMEIS.h httpOMEISaux.c httpOMEISaux.h httpOMEIS-MATLAB.c httpOMEISaux-MATLAB.c httpOMEISaux-MATLAB.h
AM_CPPFLAGS = @MATLAB_INCLUDE@ -fPIC