PROJECT (omeis-itk)

FIND_PACKAGE(ITK)
IF(ITK_FOUND)
	INCLUDE(${ITK_USE_FILE})
ELSE(ITK_FOUND)
	MESSAGE(FATAL_ERROR
			"ITK not found. Please set ITK_DIR.")
ENDIF(ITK_FOUND)

INCLUDE_DIRECTORIES("../omeis-http")
LINK_DIRECTORIES("../omeis-http")

ADD_LIBRARY(itkOMEIS STATIC itkOMEIS.c)
ADD_LIBRARY(itkOMEISIO STATIC itkOMEISImageIO.cxx itkOMEIS.c)

ADD_EXECUTABLE(omeis2mhd omeis2mhd.c)
TARGET_LINK_LIBRARIES(omeis2mhd itkOMEIS ITKCommon httpOMEIS curl)

ADD_EXECUTABLE(omeis2itk omeis2itk.cxx)
TARGET_LINK_LIBRARIES(omeis2itk itkOMEISIO ITKCommon ITKIO httpOMEIS curl)