noinst_LIBRARIES = libjls.a
libjls_a_SOURCES = bitio.c global.c initialize.c jpegmark.c lossless_d.c lossless_e.c \
				lossy_d.c lossy_e.c melcode.c ../include/bitio.h ../include/global.h \
				../include/jpegmark.h
                                        
AM_CPPFLAGS = -DOMEIS_ROOT=\"$(OMEIS_ROOT)\" -I../include